@@ -25,23 +25,32 @@ class QuerySportEventServiceImpl implements QuerySportEventService {
                 .toList();
     }
 
+    @Override
     public SportEventResponse getEventById(Long eventId) {
         SportEventEntity eventEntity = sportEventRepository.findEntityById(eventId);
         return SportEventMapper.entityToResponse(eventEntity);
     }
 
+    @Override
     public List<UserResponse> getEventUsers(Long eventId) {
         SportEvent sportEvent = sportEventRepository.findModelById(eventId);
         return sportEvent.getEventRoles().stream()
                 .filter(er -> er.getUserId() != null)
                 .map(eventRole -> userFacade.getUserResponse(eventRole.getUserId()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Override
     public List<EventRoleResponse> getEventsForUser(Long userId) {
         List<EventRole> eventRoles = eventRoleRepository.getEventRoleEntitiesByUserEntityId(userId);
-        List<EventRoleEntity> eventRoleEntities = eventRoles.stream().map(EventRoleMapper::modelToEntity).toList();
-        return eventRoleEntities.stream().map(EventRoleMapper::entityToResponse).toList();
+        List<EventRoleEntity> eventRoleEntities = eventRoles
+                .stream()
+                .map(EventRoleMapper::modelToEntity)
+                .toList();
+
+        return eventRoleEntities.stream()
+                .map(EventRoleMapper::entityToResponse)
+                .toList();
 
     }
 }
